noticed that the score was not always appearing at the end of the game, so changed the end game function to async and got it to wait for the response before redirecting

--- a/views/score.ejs
+++ b/views/score.ejs
@@ -25,7 +25,7 @@
 
 
                                 <div id="endAction" class="flex row gap mt-25 wrap"> <a class="btn bg-green"
-                                        href="/questions">Play
+                                        href="/authorize">Play
                                         Again</a><a class="btn bg-white" href="#">View
                                         Highscores</a></div>
 
