added message to login screen

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,12 +10,15 @@
             <h2>How well do you know your liked songs?</h2>
         </header>
 
-        <div class="container flex column mt-50 align-center justify-center">
-            <div class="flex row justify-center align-center gap"><a class="btn bg-green" href="/authorize">Login with
+        <div class="container flex column mt-50 align-center justify-center gap text-center">
+            <p>This demo app requires Spotify login access. Please use the following credentials to get started:</p>
+            <p><strong>Username -</strong> shuffleshowdown@outlook.com</p>
+            <p><strong>Password -</strong> LetsShuffle123!</p>
+            <div class="flex row justify-center align-center mt-25"><a class="btn bg-green" href="/authorize">Login
+                    with
                     Spotify</a>
             </div>
         </div>
-
 
     </body>
 
